--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,11 +1,4 @@
 <li>
-  <span class="content"><%= micropost.contents %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-  </span>
-  <% if current_user?(micropost.user) %>
-    <%= link_to "delete", micropost, method: :delete,
-                                     data: { confirm: "You sure?" },
-                                     title: micropost.contents %>
-  <% end %>
+  <span class="content"><%= wrap(micropost.contents) %></span>
+  <%= render 'shared/time_delete_link', item: micropost %>
 </li>
